Chat fixes to scroll and long lines.
Chat box is now autoscrolled to bottom when scrollbar appears, and long
lines are broken down to multiple lines.

--- a/css/default.css
+++ b/css/default.css
@@ -33,6 +33,8 @@ body {
 		border: 1px solid white;
 		border-bottom: none;
 		color: white;
+		overflow-y: auto;
+		word-break: break-word;
 	}
 
 	#chatInput {
